# flask-cookiecutter

./: .gitignore
{{cookiecutter.directory_name}}/: config.py  cookiecutter.json  pyproject.toml
{{cookiecutter.directory_name}}/app/: __init__.py  models.py
