[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
pytest = "^6.2.5"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.19.0"
Flask-JWT-Extended = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
